用户模块初步实现：用户登录，导航栏加载用户名

--- a/src/view/common/nav-top.htm
+++ b/src/view/common/nav-top.htm
@@ -1,7 +1,7 @@
 <div class="nav-top">
     <div class="w">
         <div class="user-userinfo">
-            <span class="user no-login">
+            <span class="user not-login">
                 <span class="link js-login">登录</span>
                 <span class="link js-register">注册</span>
             </span>
