--- a/src/page/common/csustore.css
+++ b/src/page/common/csustore.css
@@ -74,3 +74,14 @@ input[type="checkbox"]{
     background: url("../../images/loading.gif") no-repeat;
     background-size: 90% 90%;
 }
+
+/* 面包屑导航 */
+.crumb {
+    height: 50px;
+    line-height: 50px;
+    background: #eee;
+    color: #888;
+    font-size: 14px;
+    margin-bottom: 10px;
+    border-top: 2px solid #215496;
+}
