用户中心的个人信息和修改密码部分完成

--- a/src/page/common/csustore.css
+++ b/src/page/common/csustore.css
@@ -20,6 +20,12 @@ label{
 input[type="checkbox"]{
     cursor: pointer;
 }
+dt {
+    margin: 0 0 6px;
+}
+dd {
+    margin-left: 0;
+}
 
 /* 定宽布局 */
 .w{
