修改部分问题

--- a/src/view/user-login.html
+++ b/src/view/user-login.html
@@ -30,7 +30,7 @@
 
                 <a class="btn btn-login" id="submit">登录</a>
                 <div class="user-form-link">
-                    <a href="user-forget-password-reset.html" class="link">忘记密码</a>
+                    <a href="user-password-reset.html" class="link">忘记密码</a>
                     <a href="./user-register.html" class="link">免费注册</a>
                 </div>
             </div>
