--- a/src/view/common/nav-top.htm
+++ b/src/view/common/nav-top.htm
@@ -24,7 +24,7 @@
                 <a href="" class="link">我的订单</a>
             </li>
             <li class="nav-top-item">
-                <a href="" class="link">个人中心</a>
+                <a href="./user-center.html" class="link">个人中心</a>
             </li>
             <li class="nav-top-item">
                 <a href="" class="link">关于商城</a>
