更换重置密码中使用的分布条

--- a/src/page/common/csustore.css
+++ b/src/page/common/csustore.css
@@ -66,6 +66,21 @@ dd {
     cursor: pointer;
     text-decoration: none;
 }
+.btn-plain {
+    display: inline-block;
+    padding: 0 20px;
+    height: 40px;
+    line-height: 40px;
+    vertical-align: middle;
+    border: 1px solid #215496;
+    background: #fff;
+    color: #215496;
+    font-size: 17px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    text-decoration: none;
+}
 .btn-mini{
     height: 25px;
     line-height: 25px;
