--- a/src/view/user-password-reset.html
+++ b/src/view/user-password-reset.html
@@ -8,56 +8,54 @@
 <%= require("./common/nav-top-simple.htm") %>
 
     <div class="page-wrap w">
-        <div class="user-content">
-            <div class="user-form">
-                <div class="step-content">
-                    <div class="step-header"></div>
-                    <div class="user-form-error">
-                        <i class="fa fa-exclamation-circle error-icon"></i>
-                        <p class="error-message">error</p>
+        <div class="user-password-reset">
+            <div class="title">找回密码</div>
+            <div class="process-container"></div>
+            <div class="form">
+                <div class="form-error">
+                    <i class="fa fa-exclamation-circle error-icon"></i>
+                    <p class="error-message">error</p>
+                </div>
+
+                <div class="step-form-item" id="step-1">
+                    <div class="form-item">
+                        <label for="username" class="label">
+                            <i class="fa fa-user"></i>
+                        </label>
+                        <input type="text" class="input" id="username" placeholder="请输入用户名" autocomplete="off">
                     </div>
-                    <div class="step-body">
-                        <div class="step-item" id="step-1">
-                            <div class="user-form-item">
-                                <label for="username" class="user-form-label">
-                                    <i class="fa fa-user"></i>
-                                </label>
-                                <input type="text" class="user-form-input" id="username" placeholder="请输入用户名" autocomplete="off">
-                            </div>
-                        </div>
-                        <div class="step-item" id="step-2">
-                            <div class="user-form-item">
-                                <label for="question" class="user-form-label">
-                                    <i class="fa fa-question"></i>
-                                </label>
-                                <input type="text" class="user-form-input" id="question" placeholder="请输入问题" autocomplete="off">
-                            </div>
-                            <div class="user-form-item">
-                                <label for="answer" class="user-form-label">
-                                    <i class="fa fa-info"></i>
-                                </label>
-                                <input type="text" class="user-form-input" id="answer" placeholder="请输入答案" autocomplete="off">
-                            </div>
-                        </div>
-                        <div class="step-item" id="step-3">
-                            <div class="user-form-item">
-                                <label for="new-password" class="user-form-label">
-                                    <i class="fa fa-lock"></i>
-                                </label>
-                                <input type="password" class="user-form-input" id="new-password" placeholder="请输入新密码" autocomplete="off">
-                            </div>
-                            <div class="user-form-item">
-                                <label for="repeat-password" class="user-form-label">
-                                    <i class="fa fa-lock"></i>
-                                </label>
-                                <input type="password" class="user-form-input" id="repeat-password" placeholder="请再次输入密码" autocomplete="off">
-                            </div>
-                        </div>
+                </div>
+                <div class="step-form-item" id="step-2">
+                    <div class="form-item">
+                        <label for="question" class="label">
+                            <i class="fa fa-question"></i>
+                        </label>
+                        <input type="text" class="input" id="question" placeholder="请输入问题" autocomplete="off">
+                    </div>
+                    <div class="form-item">
+                        <label for="answer" class="label">
+                            <i class="fa fa-info"></i>
+                        </label>
+                        <input type="text" class="input" id="answer" placeholder="请输入答案" autocomplete="off">
+                    </div>
+                </div>
+                <div class="step-form-item" id="step-3">
+                    <div class="form-item">
+                        <label for="new-password" class="label">
+                            <i class="fa fa-lock"></i>
+                        </label>
+                        <input type="password" class="input" id="new-password" placeholder="请输入新密码" autocomplete="off">
+                    </div>
+                    <div class="form-item">
+                        <label for="repeat-password" class="label">
+                            <i class="fa fa-lock"></i>
+                        </label>
+                        <input type="password" class="input" id="repeat-password" placeholder="请再次输入密码" autocomplete="off">
                     </div>
                 </div>
 
-                <a class="btn-prev" id="prev">上一步</a>
-                <a class="btn btn-next" id="next">下一步</a>
+                <a class="btn-plain" id="prev">上一步</a>
+                <a class="btn" id="next">下一步</a>
             </div>
         </div>
     </div>
