--- a/src/view/product-list.html
+++ b/src/view/product-list.html
@@ -27,10 +27,8 @@
                 <i class="fa fa-sort-desc"></i>
             </li>
         </ul>
-        <ul class="product-list-content">
-        </ul>
-        <div class="pagination">
-        </div>
+        <ul class="product-list-content"></ul>
+        <div class="pagination"></div>
     </div>
 
 <%= require("./common/common-footer.htm") %>
