--- a/src/view/common/nav-top.htm
+++ b/src/view/common/nav-top.htm
@@ -15,7 +15,7 @@
 
         <ul class="nav-top-list">
             <li class="nav-top-item">
-                <a href="" class="link">
+                <a href="./cart.html" class="link">
                     <i class="fa fa-shopping-cart"></i>
                     购物车(<span class="cart-count">0</span>)
                 </a>
