--- a/src/view/order-info.html
+++ b/src/view/order-info.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div class="page-wrap w">
+<div class="w">
     <div class="order-info-content">
         <div class="loading"></div>
     </div>
