--- a/src/view/product-list.html
+++ b/src/view/product-list.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="page-wrap w">
+    <div class="w">
         <ul class="sort-content">
             <li class="sort-item active" data-type="default">默认排序</li>
             <li class="sort-item" data-type="price">
