--- a/src/view/address-list.html
+++ b/src/view/address-list.html
@@ -26,7 +26,10 @@
     </div>
 
     <div class="main">
-        <div class="loading"></div>
+        <div class="subhead">收货地址</div>
+        <div class="address-list-wrapper">
+            <div class="loading"></div>
+        </div>
     </div>
 </div>
 
