修复快速多次点击出现蓝条和重复绑定导致数量变化异常的问题

--- a/src/utils/input-number/index.css
+++ b/src/utils/input-number/index.css
@@ -16,6 +16,10 @@
     border: 1px solid #ccc;
     cursor: pointer;
     text-decoration: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .input-number .input-number-btn.disabled {
