--- a/src/page/checkout/index.css
+++ b/src/page/checkout/index.css
@@ -56,7 +56,7 @@
     width: 432px;
 }
 
-.price-col, .amount-col, .total-price-col {
+.price-col, .quantity-col, .total-price-col {
     width: 216px;
 }
 
