--- a/src/view/common/sidebar.htm
+++ b/src/view/common/sidebar.htm
@@ -1,5 +1,5 @@
 <ul class="sidebar">
-    <li class="sidebar-item" id="user-info">
+    <!-- <li class="sidebar-item" id="user-info">
         <i class="fa fa-user sidebar-item-visual"></i>
         <span class="sidebar-item-label">个人信息</span>
     </li>
@@ -14,5 +14,5 @@
     <li class="sidebar-item" id="order-list">
         <i class="fa fa-list sidebar-item-visual"></i>
         <span class="sidebar-item-label">我的订单</span>
-    </li>
+    </li> -->
 </ul>
