--- a/src/page/add-to-cart/index.css
+++ b/src/page/add-to-cart/index.css
@@ -32,12 +32,17 @@
     align-items: center;
 }
 
-.product-info .product-img {
+.product-info .product-img-wrapper {
     width: 60px;
     height: 60px;
     border: 1px solid #e8e8e8;
     margin: 0 8px;
     position: relative;
+}
+
+.product-info .product-img-wrapper .product-img {
+    width: 100%;
+    max-height: 60px;
 }
 
 .product-info .product-desc {
