--- a/src/page/cart/index.css
+++ b/src/page/cart/index.css
@@ -65,13 +65,18 @@
     float: left;
 }
 
-.cart-item .product-info .product-img {
+.cart-item .product-info .product-img-wrapper {
     float: left;
     width: 60px;
     height: 60px;
     border: 1px solid #efefef;
     margin: 0 14px;
     position: relative;
+}
+
+.cart-item .product-info .product-img-wrapper .product-img {
+    width: 100%;
+    height: 100%;
 }
 
 .cart-item .product-info .product-name {
