--- a/src/page/checkout/index.css
+++ b/src/page/checkout/index.css
@@ -36,11 +36,16 @@
     justify-content: center;
 }
 
-.item .product-info .product-img {
+.item .product-info .product-img-wrapper {
     width: 60px;
     height: 60px;
     border: 1px solid #efefef;
     margin: 0 14px;
+}
+
+.item .product-info .product-img-wrapper .product-img {
+    width: 100%;
+    height: 100%;
 }
 
 .item .product-info .product-name {
