--- a/src/page/common/sidebar/index.css
+++ b/src/page/common/sidebar/index.css
@@ -6,17 +6,18 @@
 }
 
 .sidebar-item {
-    grid-column: 1;
     text-align: left;
     width: 100%;
     height: 35px;
     line-height: 35px;
     font-size: 14px;
     color: #1F2328;
+    border-radius: 6px;
 }
 
 .sidebar .sidebar-item-active {
     background: #eaeef2;
+    font-weight: bold;
 }
 
 .sidebar .sidebar-item:hover {
@@ -25,6 +26,6 @@
 
 .sidebar .sidebar-item .sidebar-item-visual {
     margin-left: 3px;
-    margin-right: 5px;
+    margin-right: 7px;
     color: #656d76;
 }
