--- a/src/page/order-list/index.css
+++ b/src/page/order-list/index.css
@@ -93,13 +93,18 @@
     float: left;
 }
 
-.order-list-item .product-info .product-img {
+.order-list-item .product-info .product-img-wrapper {
     float: left;
     width: 60px;
     height: 60px;
     border: 1px solid #efefef;
     margin: 0 14px;
     position: relative;
+}
+
+.order-list-item .product-info .product-img {
+    width: 100%;
+    max-height: 60px;
 }
 
 .order-list-item .product-info .product-name {
