--- a/src/page/order-pay/index.css
+++ b/src/page/order-pay/index.css
@@ -1,60 +1,23 @@
-.order-pay {
+.order-pay-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    background: #fff;
+}
+
+.pay-qrcode-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 240px;
+    background-color: #215496;
+}
+
+.pay-qrcode-wrapper img {
+    width: 200px;
+    height: 200px;
+    border-radius: 6px;
     background-color: #fff;
-    padding: 20px 100px;
-}
-
-.order-pay .header {
-    height: 40px;
-    line-height: 25px;
-    font-size: 20px;
-    font-weight: bold;
-    border-bottom: 1px solid #e8e8e8;
-}
-
-.order-pay .body {
-    padding: 20px 0;
-    height: 120px;
-    line-height: 15px;
-    font-size: 14px;
-    border-bottom: 1px solid #e8e8e8;
-}
-
-.order-pay .body div {
-    margin-bottom: 15px;
-}
-
-.order-pay .body div:last-child {
-    margin-bottom: 0;
-}
-
-.price-text {
-    color: #e54346;
-}
-
-.footer .title {
-    height: 40px;
-    line-height: 40px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.footer .pay-type-list {
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    margin-bottom: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
-}
-
-.pay-btn {
-    display: block;
-    float: left;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    border: 1px solid #eee;
-    border-radius: 2px;
-    cursor: pointer;
 }
